clang/test/BSC/Negative/Ownership/Borrow/borrow_check_rules/borrow_array_struct/borrow_array_struct.cbs
// RUN: %clang_cc1 -verify %s

struct T {
  int * _Borrow _Nullable p;
};

_Safe void foo(void) {
  struct T ptrarray[10] = {};
  int a = 0;
  {
    int b = 0;
    ptrarray[2].p = &_Mut a;
    ptrarray[4].p = &_Mut b; // expected-error {{`b` does not live long enough}}
  } // expected-note {{`b` dropped here while still borrowed}}
  int r = *ptrarray[4].p;
}

struct S { int a; };

void foo2() {
  struct S s2[1] = {};
  int *_Borrow a = &_Mut s2[0].a; // expected-note {{first mut borrow occurs here}}
  int *_Borrow b = &_Mut (*s2).a; // expected-error {{cannot borrow `s2[].a` as mutable more than once at a time}}
  (void)a;
  (void)b;
}